<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_fav_open"
        android:icon="@drawable/ic_link"
        android:title="@string/fav_action_open" />
    <item
        android:id="@+id/action_fav_copy_link"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy_clean_link" />
    <item
        android:id="@+id/action_fav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share_link" />
    <item
        android:id="@+id/action_fav_edit_title"
        android:title="@string/fav_action_edit_title" />
    <item
        android:id="@+id/action_fav_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/btn_delete" />
</menu>
